<?xml version="1.0"?>
<package format="3">
  <name>pid_controller</name>
  <version>0.0.0</version>
  <description>ROS 2 PID controller</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

 
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

